--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -1,10 +1,10 @@
 # INTRODUCTION
 
 
-Under DFO's New Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be > 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as human lifetime or a specified number of salmon generations’ [@dfoCanadaPolicyConservation2005]<!--CH add ref link-->. Thus, while LRPs under the Fisheries Act are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU-level. Methods to assess CU status have been identified for a range of data types, and WSP Integrated Assessment methods (hereafter called 'WSP assessments') that use expert opinion to combine multiple metrics into a single estimate of CU status have been developed [e.g., @grant2017FraserSockeye2020]. Metrics used to assess WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance. Lower and upper benchmarks on those metrics are used to assign status into one of three zones, green, amber and red, representing increasingly depleted population and requiring increased management interventions (DFO 2005), and are described more fully in the companion paper to this one,  *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al., in review).  At present, a key gap in our ability to develop LRPs under the Fisheries Act is that CU-level status assessments have not been aggregated to the SMU level.
+Under DFO's <!--LW: Canada's new Fisheries Act?--> new <!--LW: lower case for new?-->Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be > 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations’ [@dfoCanadaPolicyConservation2005]<!--CH add ref link-->. Thus, while LRPs under the Fisheries Act are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU level. Methods to assess CU status have been identified for a range of data types, and WSP Integrated Assessment methods (hereafter called 'WSP assessments') that use expert opinion to combine multiple metrics into a single estimate of CU status have been developed [e.g., @grant2017FraserSockeye2020]. Metrics used to assess WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance [@holtIndicatorsStatusBenchmarks2009]<!--LW: added reference-->. Lower and upper benchmarks on those metrics are used to assign status into one of three zones, green, amber and red, representing increasingly depleted population and requiring increased management interventions [@dfoCanadaPolicyConservation2005], and are described more fully in the companion paper to this one,  *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al., in review)<!-- LW: do you want a footnote here? ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]-->.  At present, a key gap in our ability to develop LRPs under the Fisheries Act is that CU-level status assessments have not been aggregated to the SMU level.
 
 
-LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is occurring to the stock [@governmentofcanadaFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that methods for identifying LRPs should ensure that component CUs are maintained. Our companion paper, Holt et al., (in review) argues that the maintenance of spawning abundance at the CU level is a key biological requirement for Pacific Salmon LRPs.
+LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is occurring to the stock [@governmentofcanadaFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that methods for identifying LRPs should ensure that component CUs are maintained. Our companion paper, Holt et al., (in review)^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review] argues that the maintenance of spawning abundance at the CU level is a key biological requirement for Pacific Salmon LRPs.
 
 <!--CW suggestion change lst sentence above to:
 	Our companion paper, Holt et al., (in review) argues that the maintenance of CU spawning abundance above levels that would cause to serious harm is the key biological requirement for Pacific Salmon LRPs.
@@ -17,4 +17,4 @@ a.	Apply proposed methods to Pacific Salmon case studies over a range of data ty
 b.	For case studies, evaluate methods for developing LRPs using a combination of sensitivity analyses to key parameters and assumptions, and where possible retrospective analyses.
 -->
 
-The goals of this working paper are to demonstrate alternative LRP estimation methods for three case study SMUs that vary in data types and availabilities, and then evaluate candidate LRPs using a combination of sensitivity analyses and, where possible, retrospective analyses. A full evaluation of LRPs, for examples, using closed-loop simulations, is beyond the scope of the current project and is a high priority for future research. The case studies considered were Interior Fraser Coho Salmon (*Oncorhynchus kisutch*), West Coast Vancouver Island (WCVI) Chinook Salmon (*Oncorhynchus tshawytscha*), and Inner South Coast Chum Salmon (*Oncorhynchus keta*) - excluding Fraser. Each of these SMUs is comprised of 3-7 CUs and has been selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inner South Coast Chum). Detailed guidelines for identifying LRPs for Pacific salmon SMUs informed by these three case study applications are available in the companion working paper (Holt et al., in review). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. The LRPs presented in this paper are illustrative and not meant to be definitive, as they may require more thorough review of data and methodology with local analysts and partners.  
+The goals of this working paper are to demonstrate alternative LRP estimation methods for three case study SMUs that vary in data types and availabilities, and then evaluate candidate LRPs using a combination of sensitivity analyses and, where possible, retrospective analyses. A full evaluation of LRPs, for examples, using closed-loop simulations, is beyond the scope of the current project and is a high priority for future research. The case studies considered were Interior Fraser Coho Salmon (*Oncorhynchus kisutch*), West Coast Vancouver Island (WCVI) Chinook Salmon (*Oncorhynchus tshawytscha*), and Inside South Coast Chum Salmon (*Oncorhynchus keta*;  excluding Fraser River CUs). Each of these SMUs is comprised of 3-7 CUs and has been selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inside South Coast Chum). Detailed guidelines for identifying LRPs for Pacific salmon SMUs informed by these three case study applications are available in the companion working paper (Holt et al., in review)<!-- LW: do you want a footnote here? ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]-->. For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. The LRPs presented in this paper are illustrative and not meant to be definitive, as they may require more thorough review of data and methodology with local analysts and partners.  
