updating appendix names for case study paper

--- a/caseStudyWP/appendix-github-links.Rmd
+++ b/caseStudyWP/appendix-github-links.Rmd
@@ -1,6 +1,10 @@
+
 <!-- The following code should appear at the beginning of the first appendix.
 After that, all subsequent sections will be turned into appendices. -->
 
+`r if(knitr:::is_latex_output()) '\\Appendices'`
+
+`r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'`
 
 # DATA AND ANALYSIS LINKS {#app:github-appendix}
 
