Minor edits to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -672,7 +672,7 @@ Given that the estimation of logistic regression-based LRPs were sensitive to da
 
 The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, it made sense to set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above Sgen given a specified fixed ER policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks/species.
 
-Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will beed to be higher to help avoid the situation where weak CUs drop into red status.
+Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into red status.
 
 
 
