--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -178,7 +178,7 @@ where,
    (\#eq:SMSY)
 \end{equation}
 
-and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish @liermannUsingAccessibleWatershed2010 (Table \@ref(chinook-benchmarks)). <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->
+and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish @liermannUsingAccessibleWatershed2010 (Table \@ref(chinook-benchmarks)). <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->  <!--KH: Note that I have included a link the this appendix in the chapter 2 overview, where I mention that code for all case studies is in the appendix. So, it may not be necessary to include in each case study individually?-->
 
 Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006], (>7 recruits/spawner).  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."-->
 
