--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -5,7 +5,7 @@ output:
 ---
 # LRP ESTIMATION METHODS{#MethodsChapter}
 
-In this section, we provide an overview of methods used to develop LRPs for our three case studies. Detailed methods specific to each case study are provided in Sections 3 (Interior Fraser Coho), 4 (WCVI Chinook), and 5 (Inner South Coast Chum, excluding Fraser). 
+In this section, we provide an overview of methods used to develop LRPs for our three case studies. Detailed methods specific to each case study are provided in Sections 3 (Interior Fraser Coho), 4 (WCVI Chinook), and 5 (Inner South Coast Chum, excluding Fraser). Links to data and analysis code repository used for all three case studies are in Appendix \@ref(app:github-appendix).
 
 ## OVERVIEW
 
@@ -105,7 +105,7 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 
 We initially considered an alternative approach to logistic regression in which the LRP represents the aggregate abundance that has historically been associated with a pre-specified proportion of CUs being above their lower benchmark. Using this approach, CU-level status was quantified as the number or CUs with status > LBM for each year of observed data.  A logistic regression was then fit to predict the proportion of CUs with status > LBM as a function of aggregate spawner abundance to the SMU (i.e., abundance from nCUs combined). We do not present this method for our case studies, however, due to inherent limitations when the required proportion of CUs above their lower benchmarks is 100%. Equation \@ref(eq:logisticLRP) cannot be solved directly for a threshold proportion of $p^*$ = 100%, and LRP estimates were highly sensitive to the choice of $p^*$ value used as a proxy. Using $p^*$ = 99% vs. $p^*$ = 99.9% vs. $p^*$ = 99.99% gave very different LRP estimates. 
 
-The logistic regression model was implemented in TMB [@kristensen_tmb_2016]. The model was statistically integrated, i.e., both the CU-specific lower benchmarks (S\textsubscript{gen}) and the SMU logistic regression parameters were estimated within the same statistical model. The integrated approach allowed the propagation of uncertainty in parameter estimates from the CU level to the SMU level resulting in more comprehensive uncertainty estimates for the aggregate abundance LRPs.   
+The logistic regression model was implemented in TMB [@kristensenTMBAutomaticDifferentiation2016]. The model was statistically integrated, i.e., both the CU-specific lower benchmarks (S\textsubscript{gen}) and the SMU logistic regression parameters were estimated within the same statistical model. The integrated approach allowed the propagation of uncertainty in parameter estimates from the CU level to the SMU level resulting in more comprehensive uncertainty estimates for the aggregate abundance LRPs.   
 
 
 ##### Logistic Regression Model Diagnostics
@@ -203,7 +203,7 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward under current exploitation rates.  Natural variability in  recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. <!--CH 4 Dec: I revised the first few sentences of this pgh to align with Guidelines paper; feel free to revise, Can we describe various ERS as a sensitivity analyses subsequently?--> Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. S\textsubscript{gen}).  This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Salmon Scanner tool to develop LRPs using projections.
 
-We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), and model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
+We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (see Appendix \@ref(app:github-appendix) for link to code).  
 
 Detailed descriptions of the parameterization of samSim for our two case study applications of abundance-based projected LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Chapters 3 and 4, respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. 
 
