--- a/caseStudyWP/appendix-github-links.Rmd
+++ b/caseStudyWP/appendix-github-links.Rmd
@@ -12,6 +12,10 @@ Code for data and analysis for the case studies are available on the Git Hub rep
 
 [pacific-salmon-assess/SalmonLRP_RetroEval](https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval)
 
+Code for the samSim closed loop simulation modelling tool used to conduct stochastic projections are available on the 'LRP' branch of the following Git Hub repository:
+[pacific-salmon-assess/SalmonLRP_samSim](https://github.com/Pacific-salmon-assess/samSim/tree/LRP)
+
+
 Code for the write-up of this report are available on the Git Hub repository:
 
 [pacific-salmon-assess/SalmonLRP_csasdown](https://github.com/Pacific-salmon-assess/SalmonLRP_csasdown)
